first iteration of menu-view;

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- Add any global styles for body, document, etc. -->
     <style>
       @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');
+      @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');
       body {
         margin: 0;
         /* This is a font-stack that tries to use the system-default sans-serifs first */
